--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<center> <img src="patata.jpeg" width="300" vspace="200"> </center>
 
-		<font class="font2"> <P> <a href="https://palodepesangelaurelio102.on.drv.tw/practicas/Integrantes.html" class="hiper">Ingresar a los Integrantes </font> </P> 
+		<font class="font2"> <P> <a href="https://palodepes10025.github.io/portada/" class="hiper">Ingresar a los Integrantes </font> </P> 
 
 		<font class="font2"> <P> <a href="https://palodepesangelaurelio102.on.drv.tw/practicas/MapadeNav.html" class="hiper"> Regresar al mapa de navegacion </A> </font> </P>
 	
