--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	
 		<font class="font2"> <P> <a href="https://sarahipatriciomaruri12.on.drv.tw/paginas%20web/Desarrolloreloj.html" class="hiper"> Ingresar al Planteamiento </font> </P> </A>
 
-		<font class="font2"> <P> <a href="https://palodepesangelaurelio102.on.drv.tw/practicas/Armado.html" class="hiper"> Ingresar al Armado </font> </P> </A>
+		<font class="font2"> <P> <a href="https://palodepes10025.github.io/armado/" class="hiper"> Ingresar al Armado </font> </P> </A>
 		
 		<font class="font2"> <P> <a href="https://ekhethyq23nasb36ckml9g.on.drv.tw/conclucion.html" class="hiper"> Ingresar a la Conclusi&#243;n </font> </P> </A>
 
