--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<font class="font2"> <P> <a href="https://palodepes10025.github.io/integrantes/" class="hiper">Ingresar a los Integrantes </font> </P> 
 
-		<font class="font2"> <P> <a href="https://palodepesangelaurelio102.on.drv.tw/practicas/MapadeNav.html" class="hiper"> Regresar al mapa de navegacion </A> </font> </P>
+		<font class="font2"> <P> <a href="https://palodepes10025.github.io/map/" class="hiper"> Regresar al mapa de navegacion </A> </font> </P>
 	
 		<font class="font2"> <P> <a href="https://ekhethyq23nasb36ckml9g.on.drv.tw/INTRODUCCION.HTML" class="hiper"> Ingresar a la Introducci&#243;n </font> </P> </A>
 	
