--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<font class="font2"> <P> <a href="https://palodepes10025.github.io/map/" class="hiper"> Regresar al mapa de navegacion </A> </font> </P>
 	
-		<font class="font2"> <P> <a href="https://ekhethyq23nasb36ckml9g.on.drv.tw/INTRODUCCION.HTML" class="hiper"> Ingresar a la Introducci&#243;n </font> </P> </A>
+		<font class="font2"> <P> <a href="https://trikis42.github.io/introo/" class="hiper"> Ingresar a la Introducci&#243;n </font> </P> </A>
 	
 		<font class="font2"> <P> <a href="https://sarahipatriciomaruri12.on.drv.tw/paginas%20web/Desarrolloreloj.html" class="hiper"> Ingresar al Planteamiento </font> </P> </A>
 
